# not-boring-resume-mcp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: cover-letter-template.md  cv.yaml
src/not_boring_resume_mcp/: __init__.py  cv_image.py  render.py  server.py
src/not_boring_resume_mcp/prompts/: tailor_cv.md
tests/: test_render.py
