[project]
name = "not-boring-resume-mcp"
version = "0.1.2"
description = "MCP server that renders a YAML CV into a one-page PDF via notboringresume.cloud (local Chromium)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.10.2",
    "mcp[cli]>=1.28.0",
    "playwright>=1.60.0",
    "pypdf>=6.14.2",
    "ruamel-yaml>=0.19.1",
]

[project.scripts]
not-boring-resume-mcp = "not_boring_resume_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/not_boring_resume_mcp"]

[tool.semantic_release]
# Version lives in [project] and is bumped automatically from commit messages.
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
# Runs inside the PSR action container, so keep it self-contained (no uv here).
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
